Fixed out all the overflow and button sizes.

--- a/src/components/SidebarForm.css
+++ b/src/components/SidebarForm.css
@@ -106,7 +106,7 @@
     display: flex;
     justify-content: space-between;
     gap: 10px;
-    width: 30rem; 
+    width: 23rem; 
   }
 
 
@@ -182,7 +182,7 @@
  @media (max-width: 480px) {
     input[type="text"], input[type="password"], button[type="submit"] {
         font-size: 14px;
-        padding: 20px;
+        padding: 0.5rem;
     }
 }
  @media (max-width:505px){
